/*
 * $Id: ChangeLog,v 1.5848 2007/12/29 13:42:46 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-29 14:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
    + added hbfopen.c file.

2007-12-29 16:41 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbpp.h
  * source/pp/ppcore.c
    ! added protection against automatic word concatenation in some cases
    ! line numbering fixes
   (Borrowed from Harbour, by Przemyslaw Czerpak)

2007-12-29 15:48 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbapifs.h
  * include/hbpp.h
  * source/common/Makefile
  + source/common/hbfopen.c
  * source/common/hbfsapi.c
  * source/common/hbtrace.c
  * source/compiler/genc.c
  * source/compiler/gencobj.c
  * source/compiler/genhrb.c
  * source/compiler/genobj32.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/compiler/hbpcstat.c
  * source/compiler/ppcomp.c
  * source/ct/disk.c
  * source/ct/files.c
  * source/pp/ppcore.c
  * source/pp/ppgen.c
  * source/rtl/direct.c
  * source/rtl/file.c
  * source/rtl/filesys.c
  * source/rtl/fparse.c
  * source/rtl/fstemp.c
  * source/rtl/set.c
  * source/rtl/trace.c
  * source/rtl/gtcrs/chrmap.c
  * source/vm/errorapi.c
  * source/vm/fm.c
  * utils/hbpp/hbppcore.c
    * some GPF guards
    * use hb_fsNameConv() instead of hb_fileNameConv()
    + added hb_fopen() function - it's a wrapper to fopen() function but
      calls internally hb_fsNameConv()
    * use hb_fopen() instead of fopen()
    + added hb_fsMaxFilesError()
    * use hb_fsMaxFilesError() to avoid direct accessing of errno
      value - some compilers/platforms do not support errno